[package]
name = "wutong"
version = "0.1.0-alpha"
authors = [
    "Gavin Zheng <gav.zheng@outlook.com>",
]
description = "Wutong - A Swiss Army Knife of Developers."
repository = "https://github.com/wutongdev/wutong"
license = "MIT"
edition = "2021"

[dependencies]
md-5 = "0.10.6"
hex = "0.4.3"
clap = "4.5.19"
colored = "2.1.0"
